cluster-autoscaler/app/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: knginx
  labels:
    name: knginx
spec:
  ports:
  - port: 80
    name: http
  selector:
    name: knginx
