cluster-autoscaler/app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: knginx
  namespace: default
spec:
  rules:
  - host: knginx.gagogroup.cn
    http:
      paths: 
      - path: /
        backend:
          serviceName: knginx
          servicePort: 80
